# wav2mp3

./: .gitignore  CMakeLists.txt  FileConverter.cpp  FileConverter.h  README.md  SignalDataEncoder.cpp  SignalDataEncoder.h  WAVFileConverter.cpp  WAVFileConverter.h  WavFileReader.cpp  WavFileReader.h  main.cpp
datareaders/: BaseWaveDataReader.cpp  BaseWaveDataReader.h  DoubleWaveDataReader.cpp  DoubleWaveDataReader.h  FloatWaveDataReader.cpp  FloatWaveDataReader.h  SignedIntWaveDataReader.cpp  SignedIntWaveDataReader.h  UnsignedIntWaveDataReader.cpp  UnsignedIntWaveDataReader.h  WaveDataReaderCreator.cpp  WaveDataReaderCreator.h
images/: main_diagram.drawio
materials/lame-3.100/: Makefile  config.status  libtool
materials/lame-3.100/ACM/: Makefile
materials/lame-3.100/ACM/ADbg/: Makefile
materials/lame-3.100/ACM/ddk/: Makefile
materials/lame-3.100/ACM/tinyxml/: Makefile
materials/lame-3.100/Dll/: Makefile
materials/lame-3.100/doc/: Makefile
materials/lame-3.100/doc/html/: Makefile
materials/lame-3.100/doc/man/: Makefile
materials/lame-3.100/dshow/: Makefile
materials/lame-3.100/frontend/: Makefile  lame
materials/lame-3.100/include/: Makefile
materials/lame-3.100/libmp3lame/: Makefile  libmp3lame.la
materials/lame-3.100/libmp3lame/.libs/: libmp3lame.lai  libmp3lame.so.0.0.0
materials/lame-3.100/libmp3lame/i386/: Makefile
materials/lame-3.100/libmp3lame/vector/: Makefile
materials/lame-3.100/mac/: Makefile
materials/lame-3.100/macosx/: Makefile
materials/lame-3.100/macosx/English.lproj/: Makefile
materials/lame-3.100/macosx/LAME.xcodeproj/: Makefile
materials/lame-3.100/misc/: Makefile
materials/lame-3.100/mpglib/: Makefile
materials/lame-3.100/vc_solution/: Makefile
src/: CMakeLists.txt  ConverterWorker.cpp  ConverterWorker.h  FileHelper.cpp  FileHelper.h  FilesListMaker.cpp  FilesListMaker.h  SignalDataEncoder.cpp  SignalDataEncoder.h  SimpleLogger.cpp  SimpleLogger.h  WAVFileConverter.cpp  WAVFileConverter.h  WAVFilesConverter.cpp  WAVFilesConverter.h  WavFileReader.cpp  WavFileReader.h  main.cpp
src/datareaders/: BaseWaveDataReader.cpp  BaseWaveDataReader.h  DoubleWaveDataReader.cpp  DoubleWaveDataReader.h  FloatWaveDataReader.cpp  FloatWaveDataReader.h  SignedIntWaveDataReader.cpp  SignedIntWaveDataReader.h  UnsignedIntWaveDataReader.cpp  UnsignedIntWaveDataReader.h  WaveDataReaderCreator.cpp  WaveDataReaderCreator.h  datareaders.h
src/lame/: lame.h
